--- a/docs/clase01/01-01.md
+++ b/docs/clase01/01-01.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: TCP-IP
+title: Protocolos
 nav_order: 1
-description: "Suite de protocolos TCP-IP"
 permalink: /
+parent: Stack TCP-IP
 ---
 
 ## Protocolos
